// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render for SonarCloud 1`] = `
<NavBar
  className="navbar-global"
  height={48}
  id="global-navigation"
>
  <SonarCloudNavBranding />
  <GlobalNavMenu
    appState={
      Object {
        "qualifiers": Array [],
      }
    }
    currentUser={
      Object {
        "isLoggedIn": false,
      }
    }
    location={
      Object {
        "pathname": "",
      }
    }
    suggestions={Array []}
  />
  <ul
    className="global-navbar-menu global-navbar-menu-right"
  >
    <GlobalNavExplore
      location={
        Object {
          "pathname": "",
        }
      }
    />
    <EmbedDocsPopupHelper
      currentUser={
        Object {
          "isLoggedIn": false,
        }
      }
      suggestions={Array []}
      tooltip={false}
    />
    <Search
      appState={
        Object {
          "qualifiers": Array [],
        }
      }
      currentUser={
        Object {
          "isLoggedIn": false,
        }
      }
    />
    <Connect(GlobalNavUser)
      appState={
        Object {
          "qualifiers": Array [],
        }
      }
      currentUser={
        Object {
          "isLoggedIn": false,
        }
      }
      location={
        Object {
          "pathname": "",
        }
      }
      suggestions={Array []}
    />
  </ul>
</NavBar>
`;

exports[`should render for SonarQube 1`] = `
<NavBar
  className="navbar-global"
  height={48}
  id="global-navigation"
>
  <Connect(GlobalNavBranding) />
  <GlobalNavMenu
    appState={
      Object {
        "qualifiers": Array [],
      }
    }
    currentUser={
      Object {
        "isLoggedIn": false,
      }
    }
    location={
      Object {
        "pathname": "",
      }
    }
    suggestions={Array []}
  />
  <ul
    className="global-navbar-menu global-navbar-menu-right"
  >
    <EmbedDocsPopupHelper
      currentUser={
        Object {
          "isLoggedIn": false,
        }
      }
      suggestions={Array []}
      tooltip={true}
    />
    <Search
      appState={
        Object {
          "qualifiers": Array [],
        }
      }
      currentUser={
        Object {
          "isLoggedIn": false,
        }
      }
    />
    <Connect(GlobalNavUser)
      appState={
        Object {
          "qualifiers": Array [],
        }
      }
      currentUser={
        Object {
          "isLoggedIn": false,
        }
      }
      location={
        Object {
          "pathname": "",
        }
      }
      suggestions={Array []}
    />
  </ul>
</NavBar>
`;
